<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorScreenBackground"
              android:orientation="vertical"
              android:padding="24dp">

    <EditText
            android:id="@+id/edit_x"
            android:hint="@string/position_x"
            android:inputType="textAutoComplete" android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    <EditText
            android:id="@+id/edit_y"
            android:hint="@string/position_y"
            android:inputType="textAutoComplete" android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/edit_time"
            android:hint="@string/time_in_s"
            android:inputType="textAutoComplete" android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/button_save"
            style="@style/button_style"
            android:text="@string/button_save" />
</LinearLayout>