<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">
    <Button
            android:text="@string/scanlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnScanList"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintHorizontal_bias="0.501"/>
    <TextView
            android:text="@string/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="30sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="56dp"/>
    <TextView
            android:text="@string/algorithm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnScanList" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.346" app:layout_constraintHorizontal_bias="0.501"/>
    <Switch
            android:text="@string/ble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchBLE" android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/btnScanList"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
    />
    <Switch
            android:text="@string/wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchWifi"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/switchBLE"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
    />
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="113dp" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/lateration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbLateration" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/fingerprints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbNN" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/combination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbComb" android:layout_weight="1"/>
    </RadioGroup>
    <ImageButton
            app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ibBackSettings"
            android:contentDescription="@string/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>